<resources>
    <string name="app_name">SASAbus</string>
    <string name="bus_station_name_language">it</string>
    <string name="first_time_opendata_dialog_title">First time</string>
    <string name="first_time_opendata_dialog_message">The first time the app needs to download open data onto the smartphone. Would you like to do it now?</string>
    <string name="update_opendata_dialog_title">Update available</string>
    <string name="update_opendata_dialog_message">In the meantime the timetable has been updated. Would you like to download it now?</string>
    <string name="first_time_opendata_dialog_yes">Yes</string>
    <string name="first_time_opendata_dialog_no">Later</string>
    <string name="first_time_map_dialog_title">Map download</string>
    <string name="first_time_map_dialog_message">The app needs to download the OpenStreetMap map tiles, which are about 60MByte of data. If you don\'t have a flat data plan, we suggest you to use a wi-fi network to avoid expensive costs. Would you like to do it now?</string>
    <string name="first_time_map_dialog_yes">Yes</string>
    <string name="first_time_map_dialog_no">Later</string>
    <string name="download_opendata_map_progress_dialog_title">Downloading ...</string>
    <string name="update_opendata_notification_message">Click to download timetables updates</string>
    <string name="bus_lines">Bus lines</string>
    <string name="bus_line">Bus line</string>
    <string name="bus_stops">Bus stops</string>
    <string name="bus_stop">Bus stop</string>
    <string name="search_route">Search route</string>
    <string name="parking_spots">Parking spots</string>
    <string name="news">News</string>
    <string name="menu_map">Map</string>
    <string name="menu_park">Parking</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="drawer_open_close">NotUsed</string>
    <string name="NearbyDialog_title">Bus stops near you</string>
    <string name="NearbyDialog_searching">Localising your gps position</string>
    <string name="SelectFromMap_title">Select stop on map</string>
    <string name="SelectFromMap_select_stop">Select this stop</string>
    <string name="more">More</string>
    <string name="nearby_button">Bus stops nearby</string>
    <string name="map_button">Select bus stop from map</string>
    <string name="favorites_button">Favourite bus stops</string>
    <string name="FavouriteDialog_title">Favourites</string>
    <string name="FavouriteDialog_add_favourite">Add "%s" to favourites</string>
    <string name="FavouriteDialog_delete_toast">Keep pressed a favourite to delete it</string>
    <string name="FavouriteDialog_delete_confirm_title">Confirm deletion?</string>
    <string name="FavouriteDialog_delete_confirm_message">Would you like to delete favourite "%s"?</string>
    <string name="FavouriteDialog_delete_favourite_yes">Yes</string>
    <string name="FavouriteDialog_delete_favourite_cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="nearest_bus_stations">Nearest bus stops</string>
    <string name="deselect_all">Deselect all</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="departure_bus_stop">Departure bus stop</string>
    <string name="arrival_bus_stop">Arrival bus stop</string>
    <string name="route_missing_bus_stops">Please insert departure and arrival bus stop</string>
    <string name="search_connection">Search connection</string>
    <string name="searching_connection">Searching ...</string>
    <string name="departure">Departure:</string>
    <string name="arrival">Arrival:</string>
    <string name="route_walk">Walk</string>
    <string name="BusSchedulesFragment_area_all">All lines</string>
    <string name="BusSchedulesFragment_area_bz">Bolzano/Bozen area</string>
    <string name="BusSchedulesFragment_area_me">Meran(o) area</string>
    <string name="BusSchedulesFragment_area_other">Other lines</string>
    <string name="BusSchedulesFragment_select_line">Select ...</string>
    <string name="BusSchedulesFragment_refresh">Refresh</string>
    <string name="BusSchedulesFragment_searching">Searching ...</string>
    <string name="departures">Departures</string>
    <string name="line_txt">Line</string>
    <string name="course">Run</string>
    <string name="NextBusFragment_destination">Destination</string>
    <string name="NextBusFragment_searching">Searching ...</string>
    <string name="refresh">Refresh</string>
    <string name="lines">Lines</string>
    <string name="delay">min. delayed</string>
    <string name="advance">min. in advance</string>
    <string name="in_time">in time</string>
    <string name="no_realtime">no realtime data</string>
    <string name="laststop">direction: %1$s</string>
    <string name="next_departures">Next departures</string>
    <string name="txt_delay">delayed</string>
    <string name="txt_advance">earlier</string>
    <string name="about_text">
        &lt;b&gt;SASAbus&lt;/b&gt; - Android app for SASA bus open data
		&lt;p&gt;
		Version: %1$s
		&lt;/p&gt;
		&lt;p&gt;
		Copyright (C) 2011-2015 Paolo Dongilli, Markus Windegger, Davide Montesin, Thomas Nocker, Matthias Dieter Wallnöfer, Raiffeisen Online GmbH (Norman Marmsoler, Jürgen Sprenger, Aaron Falk)
		&lt;/p&gt;
		&lt;p&gt;
		License: GPLv3
		&lt;/p&gt;
		&lt;p&gt;
		Third part libraries:
		&lt;/p&gt;
		&lt;p&gt;
		 - ActionBarSherlock (&lt;a href="http://www.apache.org/licenses/LICENSE-2.0.txt"&gt;Apache v2.0&lt;/a&gt;)&lt;br /&gt;
		 - Viewpager (&lt;a href="http://www.apache.org/licenses/LICENSE-2.0.txt"&gt;Apache v2.0&lt;/a&gt;)&lt;br /&gt;
		 - &lt;a href="http://leafletjs.com"&gt;Leaflet&lt;/a&gt; (&lt;a href="http://github.com/Leaflet/Leaflet/blob/master/LICENSE"&gt;BSD&lt;/a&gt;)&lt;br /&gt;
		 - &lt;a href="http://sasabus.org/wiki"&gt;SASAbus HTML5 backend&lt;/a&gt; (AGPLv3)&lt;br /&gt;
		 - &lt;a href="http://www.davide.bz/en/dmxj"&gt;DM-xml-json&lt;/a&gt; (&lt;a href="http://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License"&gt;LGPLv3&lt;/a&gt;)&lt;br /&gt;
		 - &lt;a href="http://www.davide.bz/en/dmweb"&gt;DM-web&lt;/a&gt; (&lt;a href="http://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License"&gt;LGPLv3&lt;/a&gt;)&lt;br /&gt;
		 - Gson (&lt;a href="http://www.apache.org/licenses/LICENSE-2.0.txt"&gt;Apache v2.0&lt;/a&gt;)&lt;br /&gt;
		 - AltBeacon (&lt;a href="http://www.apache.org/licenses/LICENSE-2.0.txt"&gt;Apache v2.0&lt;/a&gt;)&lt;br /&gt;
		&lt;/p&gt;
		&lt;p&gt;
		Other contributions:
		 - Parking Icon: by &lt;a href="http://www.flaticon.com/authors/freepik"&gt;flaticon&lt;/a&gt; &lt;br /&gt;
		 &lt;/p&gt;
		&lt;p&gt;
			For suggestions or help please mail to &lt;a href="mailto:open@sasabz.it"&gt;open@sasabz.it&lt;/a&gt;.
		&lt;/p&gt;
		&lt;p&gt;
			Privacy: ...
		&lt;/p&gt;
    </string>
    <string name="settings_survey_recurring_title">Survey cycle</string>
    <string name="settings_survey_daily">Daily</string>
    <string name="settings_survey_weekly">Weekly</string>
    <string name="settings_survey_monthly">Monthly</string>
    <string name="settings_survey_always">Always</string>
    <string name="settings_busstop_iBeacon_guessing_title">iBeacon station detection</string>
    <string name="survey">Survey</string>
    <string name="survey_title">Short survey</string>
    <string name="survey_answer_yes">Yes</string>
    <string name="survey_answer_no">No</string>
    <string name="survey_contact_information_send">Send</string>
    <string name="survey_contact_information_cancel">Cancel</string>
    <string name="survey_contact_email_address">E-Mail Address</string>
    <string name="survey_contact_phone">Phonenumber</string>
    <string name="survey_required_fields">Please fill one of these fields</string>
    <string name="email_invalid">Invalid E-Mail Address</string>
    <string name="phone_invalid">Invalid Phonenumber</string>
</resources>