<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:clickable="true">

    <TextView
        android:id="@+id/survey_title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/survey_title"
        />
    <TextView
        android:id="@+id/survey_contact_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/survey_contact_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/survey_contact_email_address"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/survey_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/survey_contact_phone"
        android:inputType="phone"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/survey_contact_information_cancel"
            style="@style/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/survey_contact_information_cancel"
            />
        <Button
            android:id="@+id/survey_contact_information_send"
            style="@style/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/survey_contact_information_send"
            />
    </LinearLayout>
</LinearLayout>