<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/box_with_title"
        android:background="@drawable/now_layout">

        <RelativeLayout
            style="@style/title_box"
            android:layout_width="match_parent"
            android:layout_height="75dp" >

           <LinearLayout
               android:id="@+id/linearlayout_titles"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/textview_departure_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/departure"
                   android:textColor="@color/text_grey"
                   android:textSize="15sp" />

               <TextView
                   android:id="@+id/textview_arrival_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/arrival"
                   android:textColor="@color/text_grey"
                   android:textSize="15sp" />
           </LinearLayout>

           <LinearLayout
               android:id="@+id/linearlayout_busstops"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_toRightOf="@id/linearlayout_titles"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/textview_departure"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Vadena - Birti"
                   android:textSize="15sp" />

               <TextView
                   android:id="@+id/textview_arrival"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Gargazzone - Municipio"
                   android:textSize="15sp" />
           </LinearLayout>

           <LinearLayout
               android:id="@+id/linearlayout_date_and_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@id/linearlayout_titles"
               android:orientation="horizontal" >

               <TextView
                   android:id="@+id/textview_date_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/date"
                   android:textColor="@color/text_grey"
                   android:textSize="15sp" />

               <TextView
                   android:id="@+id/textview_date"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="2dp"
                   android:text="25.07.2013"
                   android:textSize="15sp" />

               <TextView
                   android:id="@+id/textview_time_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:text="@string/time"
                   android:textColor="@color/text_grey"
                   android:textSize="15sp" />

               <TextView
                   android:id="@+id/textview_time"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="2dp"
                   android:text="12:05"
                   android:textSize="15sp" />
           </LinearLayout>
        </RelativeLayout>
		<View
	       android:layout_width="match_parent"
	       android:layout_height="@dimen/title_underline_height"
	       style="@style/title_underline" />
        
        <ExpandableListView
            android:id="@+id/expandablelistview_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:groupIndicator="@drawable/selector_groupindicator"
            android:listSelector="@drawable/list_selector_holo_light"
            android:visibility="invisible" >
        </ExpandableListView>
    </LinearLayout>

</LinearLayout>