<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="it.sasabz.sasabus.ui.busstop.NextBusFragment" >

    <it.sasabz.sasabus.ui.searchinputfield.BusStationAdvancedInputText
        android:id="@+id/searchInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/departure_bus_stop" />
    <!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp">
        
        <include layout="@layout/imagebutton_mapview"
            android:id="@+id/imagebutton_mapview" />

        <TextView
            android:id="@+id/textview_busstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imagebutton_mapview"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:text="Bolzano - Via Siemens 19"
            android:textSize="25sp" />
        
    </RelativeLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/currentDate"
            style="@style/button_with_text"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/currentTime"
            style="@style/button_with_text"
            android:layout_width="88sp"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/recalculateDepartures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Re-calculate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_results"
        style="@style/box_with_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/now_layout"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/title_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_line"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/NextBusFragment_destination" />

            <TextView
                android:id="@+id/textview_arrives_in"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textview_line"
                android:layout_marginRight="20dp"
                android:text="@string/line_txt" />
        </RelativeLayout>

        <View
            style="@style/title_underline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_underline_height" />

        <ListView
            android:id="@+id/listview_next_buses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>